tests/golden/type_errors/typed_assignment_mismatch.cd
let x: number = 1;
x = "hello";
